--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,15 @@
-# Requirements for TARGET MACHINE (Windows 7 32-bit with Python 3.8.10)
-
-# Windows-specific dependencies for full keylogger functionality
 pywin32
 
-# Cross-platform keylogger (Python 3.8 compatible)
 pynput>=1.7.3
 
-# Audio recording (Python 3.8 compatible) 
 PyAudio>=0.2.11
 
-# Video recording and screenshots (Python 3.8 compatible)
 opencv-python>=4.5.5.64,<4.8.0
 Pillow>=8.4.0,<10.0.0
 PyAutoGUI>=0.9.53,<0.10.0
 numpy>=1.19.5,<1.22.0
 
-# System utilities (Python 3.8 compatible)
 psutil>=5.8.0,<6.0.0
+winshell>=0.4.7,<0.5.0
 
-# Network requests (Python 3.8 compatible)
 requests>=2.25.1,<3.0.0
